# ITK-Autopybind11

Wrapping/: TypedefMacros.cmake
Wrapping/Generators/: CMakeLists.txt
Wrapping/Generators/AutoPybind/: CMakeLists.txt  generator.py
Wrapping/Generators/Python/: CMakeLists.txt
Wrapping/macro_files/: itk_apb_wrap_module.cmake  itk_auto_load_submodules.cmake
